[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["Cory Mills <focusleft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
poetry = "^1.6.1"
ipykernel = "^6.25.2"
pandas = "^2.1.1"
plotly = "^5.17.0"
nbformat = "^5.9.2"
nltk = "^3.8.1"
ety = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
