[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["Cory Mills <focusleft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
poetry = "^1.6.1"
ipykernel = "^6.25.2"
pandas = "^2.1.1"
plotly = "^5.17.0"
nbformat = "^5.9.2"
nltk = "^3.8.1"
ety = "^1.4.0"
syllapy = "^0.7.2"
numpy = "^1.26.0"
keras = "^2.14.0"
scikit-learn = "^1.3.1"

tensorflow = {version = "^2.13.0" }
tensorflow-macos = { version = "^2.13.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "^2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
transformers = "^4.34.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
